server and client changes
