# app/shared/types/requestTypes.ts
@@ -1,0 +1,6 @@
+export type CartUpdate = {
+    id?: string,
+    customerId?: string,
+    products: string[],
+    total: number,
+}
